# OpenNeuralNetwork

./: CMakeLists.txt  Network.cpp  Network.h  Neuron.cpp  Neuron.h  Prim.cpp  Prim.h  README  Reasoning.cpp  Synaps.cpp  Synaps.h  result.csv
